// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FactoriesOverviewTimelineTab > renders correctly 1`] = `
<div
  data-v-app=""
>
  
  <v-snackbar-stub
    absolute="false"
    activatorprops="[object Object]"
    attach="false"
    closeonback="true"
    closeoncontentclick="false"
    contained="false"
    data-v-a22a8088=""
    disabled="false"
    eager="false"
    loading="false"
    location="top right"
    locationstrategy="static"
    modelvalue="false"
    openonhover="false"
    origin="auto"
    reversetimer="false"
    tile="false"
    timeout="-1"
    timer="false"
    transition="v-snackbar-transition"
    variant="elevated"
    vertical="false"
    zindex="2000"
  >
    <span
      class="px-4 text-white"
      data-v-a22a8088=""
    >
      You will be redirected to live view in {count} seconds
    </span>
  </v-snackbar-stub>
  <v-progress-linear-stub
    absolute="false"
    active="true"
    buffervalue="0"
    chunkgap="4"
    clickable="false"
    data-v-a22a8088=""
    height="4"
    indeterminate="true"
    location="top"
    max="100"
    modelvalue="0"
    reverse="false"
    roundedbar="false"
    stream="false"
    striped="false"
    tag="div"
    tile="false"
  />
  
</div>
`;

exports[`FactoriesOverviewTimelineTab > that tooltipHTMLFunc returns correct tooltip for changeover icon, green slice 1`] = `
"<div class="v-row align-center text-white"><v-col class="pb-2 pt-1">
        <div class="v-row align-center flex-nowrap"><span class="d-flex ma-n2 pr-2">
  <svg xmlns="http://www.w3.org/2000/svg" 
    viewBox="0 0 24 24"
    style="width: 24px; height: 24px; display: inline-flex; margin:undefined"
    role="img" 
    aria-hidden="true" 
    class="v-icon__svg ">
    <g fill="#0099FF">
      <path d="M12,8A4,4 0 0,0 8,12A4,4 0 0,0 12,16A4,4 0 0,0 16,12A4,4 0 0,0 12,8Z"></path>
    </g>
    </svg></span><span class="text-label-small">Changeover</span></div>
        <div class="text-body-large font-weight-medium">Candycane</div>
        <div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Start:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none"></span>
              </div><div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Target:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none">120 pcs</span>
              </div>
        
        </v-col></div>"
`;

exports[`FactoriesOverviewTimelineTab > that tooltipHTMLFunc returns correct tooltip for changeover icon, yellow slice 1`] = `
"<div class="v-row align-center text-white"><v-col class="pb-2 pt-1">
        <div class="v-row align-center flex-nowrap"><span class="d-flex ma-n2 pr-2">
  <svg xmlns="http://www.w3.org/2000/svg" 
    viewBox="0 0 24 24"
    style="width: 24px; height: 24px; display: inline-flex; margin:undefined"
    role="img" 
    aria-hidden="true" 
    class="v-icon__svg ">
    <g fill="#0099FF">
      <path d="M12,8A4,4 0 0,0 8,12A4,4 0 0,0 12,16A4,4 0 0,0 16,12A4,4 0 0,0 12,8Z"></path>
    </g>
    </svg></span><span class="text-label-small">Changeover</span></div>
        <div class="text-body-large font-weight-medium">Candycane</div>
        <div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Start:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none"></span>
              </div><div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Target:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none">120 pcs</span>
              </div>
        
        </v-col></div>"
`;

exports[`FactoriesOverviewTimelineTab > that tooltipHTMLFunc returns correct tooltip for downtime slice 1`] = `
"<div class="v-row align-center text-white"><v-col class="pb-2 pt-1">
        <div class="v-row align-center flex-nowrap"><span class="d-flex ma-n2 pr-2">
  <svg xmlns="http://www.w3.org/2000/svg" 
    viewBox="0 0 24 24"
    style="width: 24px; height: 24px; display: inline-flex; margin:undefined"
    role="img" 
    aria-hidden="true" 
    class="v-icon__svg ">
    <g fill="undefined">
      <path d="M12,8A4,4 0 0,0 8,12A4,4 0 0,0 12,16A4,4 0 0,0 16,12A4,4 0 0,0 12,8Z"></path>
    </g>
    </svg></span><span class="text-label-small">Downtime</span></div>
        <div class="text-body-large font-weight-medium">Uncommented</div>
        <div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Start:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none"> (0m)</span>
              </div><div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Machine location:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none">test position</span>
              </div>
        <div class="mt-1 text-body-small align-center flex-nowrap"><span class="mr-2">
  <svg xmlns="http://www.w3.org/2000/svg" 
    viewBox="0 0 24 24"
    style="width: 12px; height: 12px; display: inline-flex; margin:undefined"
    role="img" 
    aria-hidden="true" 
    class="v-icon__svg undefined">
    <g fill="undefined">
      <path d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"></path>
    </g>
    </svg></span><span>test note</span></div>
        </v-col></div>"
`;

exports[`FactoriesOverviewTimelineTab > that tooltipHTMLFunc returns correct tooltip for green slice 1`] = `
"<div class="v-row align-center text-white"><v-col class="pb-2 pt-1">
        <div class="v-row align-center flex-nowrap"><span class="d-flex ma-n2 pr-2">
  <svg xmlns="http://www.w3.org/2000/svg" 
    viewBox="0 0 24 24"
    style="width: 24px; height: 24px; display: inline-flex; margin:undefined"
    role="img" 
    aria-hidden="true" 
    class="v-icon__svg ">
    <g fill="undefined">
      <path d="M12,8A4,4 0 0,0 8,12A4,4 0 0,0 12,16A4,4 0 0,0 16,12A4,4 0 0,0 12,8Z"></path>
    </g>
    </svg></span><span class="text-label-small">quantity</span></div>
        <div class="text-body-large font-weight-medium">Candycane</div>
        <div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Start:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none"> (0m)</span>
              </div>
        
        </v-col></div>"
`;

exports[`FactoriesOverviewTimelineTab > that tooltipHTMLFunc returns correct tooltip for no shift slice 1`] = `
"<div class="v-row align-center text-white"><v-col class="pb-2 pt-1">
        
        <div class="text-body-large font-weight-medium">No active shift</div>
        <div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Start:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none"> (0m)</span>
              </div>
        
        </v-col></div>"
`;

exports[`FactoriesOverviewTimelineTab > that tooltipHTMLFunc returns correct tooltip for yellow slice 1`] = `
"<div class="v-row align-center text-white"><v-col class="pb-2 pt-1">
        <div class="v-row align-center flex-nowrap"><span class="d-flex ma-n2 pr-2">
  <svg xmlns="http://www.w3.org/2000/svg" 
    viewBox="0 0 24 24"
    style="width: 24px; height: 24px; display: inline-flex; margin:undefined"
    role="img" 
    aria-hidden="true" 
    class="v-icon__svg ">
    <g fill="undefined">
      <path d="M12,8A4,4 0 0,0 8,12A4,4 0 0,0 12,16A4,4 0 0,0 16,12A4,4 0 0,0 12,8Z"></path>
    </g>
    </svg></span><span class="text-label-small">Speed loss</span></div>
        <div class="text-body-large font-weight-medium">Uncommented</div>
        <div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Product:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none">Candycane</span>
              </div><div class="text-label-small font-weight-regular align-center d-flex">
              <span class="text-tertiary-dark font-weight-regular">Start:&nbsp;</span>
              <span class="text-body-small font-weight-regular text-none"> (0m)</span>
              </div>
        
        </v-col></div>"
`;
